# midi-switcher

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.cargo-husky/hooks/: pre-commit
.github/actions/setup-rust/: action.yaml
.github/workflows/: artifacts.yaml  ci.yaml  release.yaml
src/: channel_switcher.rs  main.rs  midi.rs  usb.rs
